🎉auto update by Gmeek action

--- a/backup/友情链接.md
+++ b/backup/友情链接.md
@@ -1,7 +1,7 @@
 这里记录了一些有趣的链接。
 
-### 我的友链：
+### 我的友链
 
-1.  <a href="https://mfweb.vip" target="_bank">魔方网</a>
-2.  <a href="https://onenav.vip" target="_bank">一为导航</a>
+1.  <a href="https://mfweb.vip" target="_blank">魔方网</a>
+2.  <a href="https://onenav.vip" target="_blank">一为导航</a>
 
