🎉auto update by Gmeek action

--- a/backup/人人影视二十年数据开源分享.md
+++ b/backup/人人影视二十年数据开源分享.md
@@ -3,8 +3,6 @@
 
 至于之前的人人影视数据库，是否可以从新开发转成海外影视这一领域的评分和查询网站，我还在研究可行性，大致也有了想法，过几天我把想法说一说，有兴趣的到时可以看一看。
 
-https://pan.xunlei.com/s/VODQpiTWDbpUwzPCXMPy4kvDA1
-
-提取码：q4ar
+百度网盘：http://t.cn/A6mSIYu6  提取码：rrys
 
 ![32689](https://github.com/user-attachments/assets/48b1d729-eff6-4942-a368-d3d54fa80f37)
